--- a/pytest.ini
+++ b/pytest.ini
@@ -2,7 +2,7 @@
 addopts =
     -v
     --strict-markers
-    --alluredir='allure-report'
+    --alluredir='allure-results'
 
 markers=
     auth: run tests on authorization page
